--- a/src/Application/UrlShortener.Application.UseCases/UrlShortener.Application.UseCases.csproj
+++ b/src/Application/UrlShortener.Application.UseCases/UrlShortener.Application.UseCases.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
@@ -18,10 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Domain\UrlShortener.Domain\UrlShortener.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
