add: configuracion de nivel para logs de sistema

--- a/UrlShortener.Client/UrlShortener.Client.csproj
+++ b/UrlShortener.Client/UrlShortener.Client.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Syncfusion.Blazor.Cards" Version="31.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\sample-data\" />
+  </ItemGroup>
+
 </Project>
